--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,8 +34,13 @@ a {
     color: aliceblue;
 }
 
+.about-product_navigation-menu:focus {
+    background-color: #1c69d4;
+    color: aliceblue;
+}
 
 .about-product_navigation-menu {
+    background-color: white;
     display: flex;
     padding: 5px 30px 5px 30px;
     text-decoration: none;
@@ -51,4 +56,14 @@ a {
 
 .about-product__info-block {
     width: 70%;
+}
+
+.about-product__main-title{
+    padding-bottom: 15px;
+}
+
+.about-product__main-image{
+    max-width: 100%;
+    max-height: 400px;
+    padding-bottom: 15px;
 }
